--- a/Scss/_about-project.scss
+++ b/Scss/_about-project.scss
@@ -1,65 +1,134 @@
-body{
-    overflow-x: hidden;
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.is-center {
-  margin: auto;
-}
-
-.header{
-  margin-top:2vh;
-}
-
-.logo {
+.navbar-item {
   img {
-    width: 54px;
-    height: 53px;
-    margin-top: 3vh;
+    max-width: 54.98px;
+    max-height: 53.44px;
   }
 }
+.is-navbar-end {
+  margin: 0;
+}
+.is-menu-center {
+  margin: auto;
+}
+.button {
+  border-color: transparent;
+  box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+  color: #f7cf43;
+  padding-bottom: 0px;
+  padding-top: 24px;
+}
+.button.is-rounded {
+  height: 48px;
+  width: 48px;
+}
+.button:active, .button.is-active {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:hover, .button.is-hovered {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:focus, .button.is-focused {
+  border-color: transparent;
+  color: #f7cf43;
+}
+.button:focus:not(:active), .button.is-focused:not(:active) {
+  box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+}
+.flaticon-user:before {
+  font-size: 28px;
+}
+  // .user-item {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: flex-end;
+  //   border: 1px solid #f7cf43;
+  //   border-radius: 100%;
+  //   width: 48px;
+  //   height: 48px;
+  //   i {
+  //     color: #f7cf43;
+  //     font-size: 31px; 
+  //   }
+  // }
+// #contact-app {
+//   .header-logo {
+//     img {
+//       width: 54.98px;
+//       height: 53.44px;
+//     }
+//   }
+//   .user-item {
+//     display: flex;
+//     justify-content: center;
+//     align-items: flex-start;
+//     border: 1px solid #f7cf43;
+//     border-radius: 100%;
+//     width: 40px;
+//     height: 40px;
+//     i {
+//       color: #f7cf43;
+//       font-size: 31px; 
+//     }
+//   }
+//   .nav-item {
+//     position: relative;
+//     a {
+//       color: #c5cbcd;
+//       font-size: 16px;
+//       font-family: ALK Sanet Regular;
+//     }
+//   }
+  // .nav-link {
+  //   padding-right: 0rem !important;
+  //   padding-left: 0rem !important;
+  //   padding-bottom: 0 !important;
+  // }
+//   .nav-item {
+//     margin-right: 2.5rem;
+//     margin-left: 2.5rem;
+//   }
+  .is-navbar_line.active:after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    bottom: -8px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 80%;
+    background: #f7cf43;
+  }
+  .is-navbar_line:after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    bottom: -8px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    width: 0%;
+    background: #f7cf43;
+    transition:.5s;
+  }
+  .is-navbar_line.active {
+    color: #7fd1d8!important;
+  }
+  .is-navbar_line:hover {
+    color: #7fd1d8!important;
+    background-color: inherit!important;
+  }
 
-.is-navbar_line.active:after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  bottom: -8px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  width: 80%;
-  background: #f7cf43;
-}
-.is-navbar_line:after {
-  position: absolute;
-  content: "";
-  height: 2px;
-  bottom: -8px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  width: 0%;
-  background: #f7cf43;
-  transition:.5s;
-}
-.is-navbar_line.active {
-  color: #7fd1d8!important;
-}
-.is-navbar_line:hover {
-  color: #7fd1d8!important;
-  background-color: inherit!important;
-}
+  .is-navbar_line:hover:after {
+    width: 80%;
+    background:#f7cf43;
+  }
+  .is-navbar_line{
+    padding: 0;
+    margin: 0.5rem 1.5rem;
+  }
 
-.is-navbar_line:hover:after {
-  width: 80%;
-  background:#f7cf43;
-}
-.is-navbar_line{
-  padding: 0;
-  margin: 0.5rem 2rem;
-}
 .is-user {
   border-radius: 100%;
   height: 40px;
@@ -107,13 +176,7 @@ body{
   padding-left: 30px;
 }
 
-.is-soc {
-  i {
-    color: $primary;
-    font-size: 30px;
-    margin-left: 30px;
-  }
-}
+
 
 .ladybird{
   position:fixed;
@@ -131,6 +194,23 @@ body{
   width:230px;
 }
 
-.footer{
-  padding: $footer-padding;
+.footer {
+  background-color: transparent;
+  padding: 0;
+}
+.is-soc-item {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px auto;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 6vh;
+}
+.is-soc-content {
+  margin: 0 7px;
+  i {
+    color: #7fd1d8;
+    font-size: 30px;
+  }
 }
