--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12599,25 +12599,55 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   font-size: 30px;
 }
 
-body {
-  overflow-x: hidden;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+.navbar-item img {
+  max-width: 54.98px;
+  max-height: 53.44px;
 }
 
-.is-center {
+.is-navbar-end {
+  margin: 0;
+}
+
+.is-menu-center {
   margin: auto;
 }
 
-.header {
-  margin-top: 2vh;
+.button {
+  border-color: transparent;
+  -webkit-box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+          box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+  color: #f7cf43;
+  padding-bottom: 0px;
+  padding-top: 24px;
 }
 
-.logo img {
-  width: 54px;
-  height: 53px;
-  margin-top: 3vh;
+.button.is-rounded {
+  height: 48px;
+  width: 48px;
+}
+
+.button:active, .button.is-active {
+  border-color: transparent;
+  color: #f7cf43;
+}
+
+.button:hover, .button.is-hovered {
+  border-color: transparent;
+  color: #f7cf43;
+}
+
+.button:focus, .button.is-focused {
+  border-color: transparent;
+  color: #f7cf43;
+}
+
+.button:focus:not(:active), .button.is-focused:not(:active) {
+  -webkit-box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+          box-shadow: 2px 2px 8px rgba(247, 207, 67, 0.5);
+}
+
+.flaticon-user:before {
+  font-size: 28px;
 }
 
 .is-navbar_line.active:after {
@@ -12662,7 +12692,7 @@ body {
 
 .is-navbar_line {
   padding: 0;
-  margin: 0.5rem 2rem;
+  margin: 0.5rem 1.5rem;
 }
 
 .is-user {
@@ -12716,12 +12746,6 @@ body {
   padding-left: 30px;
 }
 
-.is-soc i {
-  color: #7fd1d8;
-  font-size: 30px;
-  margin-left: 30px;
-}
-
 .ladybird {
   position: fixed;
   width: 30px;
@@ -12739,6 +12763,81 @@ body {
 }
 
 .footer {
-  padding: 3rem 1.5rem;
+  background-color: transparent;
+  padding: 0;
+}
+
+.is-soc-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 10px auto;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 6vh;
+}
+
+.is-soc-content {
+  margin: 0 7px;
+}
+
+.is-soc-content i {
+  color: #7fd1d8;
+  font-size: 30px;
+}
+
+.numbers {
+  font-size: 400px;
+  font-weight: 600;
+  font-family: "ALK Sanet";
+  color: #f7cf43;
+  margin-left: 250px;
+}
+
+.ladybird-error {
+  position: absolute;
+  top: 19vh;
+  left: 66vh;
+  width: 40px;
+  height: 40px;
+}
+
+.text-section {
+  position: absolute;
+  top: 60vh;
+  left: 45vh;
+}
+
+.error-subtitle {
+  color: #7fd1d8;
+}
+
+.fly-error {
+  position: absolute;
+  left: 60vh;
+  bottom: 10vh;
+}
+
+.error-button {
+  position: absolute;
+  bottom: 10vh;
+}
+
+.round-button {
+  width: 160px;
+  height: 60px;
+  border-radius: 290486px;
+  padding-left: calc(1em + 0.25em);
+  padding-right: calc(1em + 0.25em);
+}
+
+.error-click {
+  position: absolute;
+  bottom: 2vh;
+  color: white;
+  font-size: 18px;
 }
 /*# sourceMappingURL=style.css.map */
