--- a/Scss/_fonts.scss
+++ b/Scss/_fonts.scss
@@ -1,27 +1,27 @@
 @font-face {
-    font-family: "NotoSans-Regular";
-    src: url("../fonts/NotoSans-Regular/NotoSans-Regular.eot"); /* IE9 Compat Modes */
-    src: url("../fonts/NotoSans-Regular/NotoSans-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-      url("../fonts/NotoSans-Regular/NotoSans-Regular.otf") format("opentype"), /* Open Type Font */
-      url("../fonts/NotoSans-Regular/NotoSans-Regular.svg") format("svg"), /* Legacy iOS */
-      url("../fonts/NotoSans-Regular/NotoSans-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-      url("../fonts/NotoSans-Regular/NotoSans-Regular.woff") format("woff"), /* Modern Browsers */
-      url("../fonts/NotoSans-Regular/NotoSans-Regular.woff2") format("woff2"); /* Modern Browsers */
+    font-family: "Noto Sans";
+    src: url("../fonts/NotoSans-Regular.eot"); /* IE9 Compat Modes */
+    src: url("./fonts/NotoSans-Regular/NotoSans-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+      url("./fonts/NotoSans-Regular.otf") format("opentype"), /* Open Type Font */
+      url("./fonts/NotoSans-Regular.svg") format("svg"), /* Legacy iOS */
+      url("./fonts/NotoSans-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
+      url("./fonts/NotoSans-Regular/NotoSans-Regular.woff") format("woff"), /* Modern Browsers */
+      url("./fonts/NotoSans-Regular.woff2") format("woff2"); /* Modern Browsers */
   }
 
   
   @font-face {
     font-family: 'ALK Sanet';
-    src: url('../fonts/alk-sanet/alk-sanet-webfont.eot');
+    src: url('./fonts/alk-sanet-webfont.eot');
     /* IE9 Compat Modes */
-    src: url('../fonts/alk-sanet/alk-sanet-webfont.eot?#iefix') format('embedded-opentype'),
+    src: url('./fonts/alk-sanet-webfont.eot?#iefix') format('embedded-opentype'),
       /* IE6-IE8 */
-      url('../fonts/alk-sanet/alk-sanet-webfont.woff2') format('woff2'),
+      url('./fonts/alk-sanet-webfont.woff2') format('woff2'),
       /* Super Modern Browsers */
-      url('../fonts/alk-sanet/alk-sanet-webfont.woff') format('woff'),
+      url('./fonts/alk-sanet-webfont.woff') format('woff'),
       /* Pretty Modern Browsers */
-      url('../fonts/alk-sanet/alk-sanet-webfont.ttf') format('truetype'),
+      url('./fonts/alk-sanet-webfont.ttf') format('truetype'),
       /* Safari, Android, iOS */
-      url('../fonts/alk-sanet/alk-sanet-webfont.svg#alk_sanetregular') format('svg');
+      url('./fonts/alk-sanet-webfont.svg#alk_sanetregular') format('svg');
     /* Legacy iOS */
   }
