--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12410,18 +12410,18 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 @font-face {
-  font-family: "NotoSans-Regular";
-  src: url("../fonts/NotoSans-Regular/NotoSans-Regular.eot");
+  font-family: "Noto Sans";
+  src: url("../fonts/NotoSans-Regular.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/NotoSans-Regular/NotoSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/NotoSans-Regular/NotoSans-Regular.otf") format("opentype"), url("../fonts/NotoSans-Regular/NotoSans-Regular.svg") format("svg"), url("../fonts/NotoSans-Regular/NotoSans-Regular.ttf") format("truetype"), url("../fonts/NotoSans-Regular/NotoSans-Regular.woff") format("woff"), url("../fonts/NotoSans-Regular/NotoSans-Regular.woff2") format("woff2");
+  src: url("./fonts/NotoSans-Regular/NotoSans-Regular.eot?#iefix") format("embedded-opentype"), url("./fonts/NotoSans-Regular.otf") format("opentype"), url("./fonts/NotoSans-Regular.svg") format("svg"), url("./fonts/NotoSans-Regular.ttf") format("truetype"), url("./fonts/NotoSans-Regular/NotoSans-Regular.woff") format("woff"), url("./fonts/NotoSans-Regular.woff2") format("woff2");
   /* Modern Browsers */
 }
 
 @font-face {
   font-family: 'ALK Sanet';
-  src: url("../fonts/alk-sanet/alk-sanet-webfont.eot");
+  src: url("./fonts/alk-sanet-webfont.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/alk-sanet/alk-sanet-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/alk-sanet/alk-sanet-webfont.woff2") format("woff2"), url("../fonts/alk-sanet/alk-sanet-webfont.woff") format("woff"), url("../fonts/alk-sanet/alk-sanet-webfont.ttf") format("truetype"), url("../fonts/alk-sanet/alk-sanet-webfont.svg#alk_sanetregular") format("svg");
+  src: url("./fonts/alk-sanet-webfont.eot?#iefix") format("embedded-opentype"), url("./fonts/alk-sanet-webfont.woff2") format("woff2"), url("./fonts/alk-sanet-webfont.woff") format("woff"), url("./fonts/alk-sanet-webfont.ttf") format("truetype"), url("./fonts/alk-sanet-webfont.svg#alk_sanetregular") format("svg");
   /* Legacy iOS */
 }
 
