--- a/Scss/style.css
+++ b/Scss/style.css
@@ -12517,6 +12517,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 }
 
 .is-navbar_line {
+  font-size: 16px;
   padding: 0;
   margin: 0.5rem 1.5rem;
 }
@@ -12839,5 +12840,159 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   bottom: 2vh;
   color: white;
   font-size: 18px;
+}
+
+@media screen and (min-width: 1024px) {
+  .navbar-brand {
+    width: inherit !important;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 2rem;
+  }
+  .navbar-menu.is-active {
+    display: block;
+    position: fixed;
+    top: 3rem;
+    left: 4.7rem;
+  }
+  .is-header-logo {
+    width: 35px;
+    height: 34px;
+  }
+  .button.is-rounded {
+    height: 30px !important;
+    width: 30px !important;
+  }
+  .button.is-rounded {
+    border-radius: 50%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .button {
+    padding: 15px 0 0 !important;
+  }
+  .flaticon-user:before {
+    font-size: 20px !important;
+  }
+  .column.is-half, .column.is-half-tablet {
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    width: 58%;
+  }
+  .navbar-brand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .navbar-burger {
+    color: #C5CBCD;
+    margin-left: 0;
+  }
+  .navbar-burger span {
+    width: 20px;
+    height: 3px;
+    left: 0;
+  }
+  .navbar-burger:hover {
+    background-color: transparent;
+  }
+  a:hover {
+    color: #7fd1d8;
+  }
+  a.navbar-item,
+  .navbar-link {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .is-navbar_line.active:after {
+    width: 100% !important;
+  }
+  .is-navbar_line:hover:after {
+    width: 100% !important;
+  }
+  .navbar-menu {
+    padding: 0.5rem 0;
+    border-radius: 10px;
+    background-color: white;
+    -webkit-box-shadow: 2px 2px 8px #7FD1D866;
+            box-shadow: 2px 2px 8px #7FD1D866;
+    opacity: 1;
+  }
+  .contact-img_1 {
+    margin-left: -1.2rem;
+    margin-top: 0.5rem;
+  }
+  .contact-img_2 {
+    position: fixed;
+    margin-top: 19rem;
+    margin-left: -1rem;
+    width: 180px;
+    height: 145px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .column.is-half, .column.is-half-tablet {
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    width: 62%;
+  }
+  .navbar-item {
+    padding: 0;
+  }
+  .is-navbar_line {
+    padding: 0;
+    margin: 0.5rem 1rem !important;
+  }
+  .navbar-menu.is-active {
+    top: 5.2rem;
+    left: 2.7rem;
+  }
+  .ml-6 {
+    margin-left: 0 !important;
+    margin-top: 2.5rem;
+  }
+  .is-section-item {
+    padding: 0 1.5rem;
+  }
+  .contact-img_1 {
+    display: none;
+  }
+  .contact-img_2 {
+    display: none;
+  }
+  .is-card-content-item {
+    padding: 0 15px 55px 15px;
+  }
+  .is-card-title-item {
+    padding-top: 30px;
+  }
+  .is-soc-item {
+    left: 12vh !important;
+    right: 12vh !important;
+    bottom: 5vh !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
